[gd_scene load_steps=43 format=3 uid="uid://tsiist54ilew"]

[ext_resource type="Texture2D" uid="uid://w15thl62fe5" path="res://assets/images/bg_menu.png" id="1_4ryru"]
[ext_resource type="Script" uid="uid://bnb6pb1aitesw" path="res://scripts/initial_menu.gd" id="1_s8c3h"]
[ext_resource type="Texture2D" uid="uid://b78beni4kefu7" path="res://assets/images/press_start.png" id="2_447t3"]
[ext_resource type="Shader" uid="uid://dfntwhvgcqen8" path="res://shaders/moviment_clouds.gdshader" id="3_2idfa"]
[ext_resource type="Texture2D" uid="uid://b4b2mhvfr7vlr" path="res://assets/Seasonal Tilesets/1 - Grassland/Background parts/3 - Cloud_cover_1.png" id="4_4tl4r"]
[ext_resource type="Texture2D" uid="uid://cuwy8ivq6qstf" path="res://assets/Seasonal Tilesets/1 - Grassland/Terrain (16 x 16).png" id="4_q67vr"]
[ext_resource type="Texture2D" uid="uid://bfrt3n3oxwxex" path="res://sprites/Sprite Pack 8/7 - Barry Cherry/Victory_Pose (32 x 32).png" id="5_rxiwm"]
[ext_resource type="Texture2D" uid="uid://bht5xx8uilaph" path="res://assets/Sprite Pack 8/6 - Angie/Idle_2 (32 x 32).png" id="6_noxxc"]
[ext_resource type="Texture2D" uid="uid://clmq2s8i1mpod" path="res://assets/Sprite Pack 8/4 - Percy/Idle (32 x 32).png" id="7_ffmvr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s2ggi"]
shader = ExtResource("3_2idfa")
shader_parameter/move_speed = 0.02

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_upyjd"]
texture = ExtResource("4_q67vr")
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
11:1/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
11:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
15:3/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
11:4/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
11:5/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
4:8/0 = 0

[sub_resource type="TileSet" id="TileSet_hbysu"]
sources/0 = SubResource("TileSetAtlasSource_upyjd")

[sub_resource type="AtlasTexture" id="AtlasTexture_mmqnx"]
atlas = ExtResource("5_rxiwm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_145ku"]
atlas = ExtResource("5_rxiwm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aljvw"]
atlas = ExtResource("5_rxiwm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjdjt"]
atlas = ExtResource("5_rxiwm")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_awxdf"]
atlas = ExtResource("5_rxiwm")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_moo20"]
atlas = ExtResource("5_rxiwm")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfm10"]
atlas = ExtResource("5_rxiwm")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_310om"]
atlas = ExtResource("5_rxiwm")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1qtnc"]
atlas = ExtResource("6_noxxc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xholp"]
atlas = ExtResource("6_noxxc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mr1cc"]
atlas = ExtResource("6_noxxc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylxwl"]
atlas = ExtResource("6_noxxc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pxln"]
atlas = ExtResource("6_noxxc")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_55vig"]
atlas = ExtResource("6_noxxc")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_54226"]
atlas = ExtResource("6_noxxc")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4j8o"]
atlas = ExtResource("6_noxxc")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aat6t"]
atlas = ExtResource("6_noxxc")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_82wis"]
atlas = ExtResource("6_noxxc")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e5est"]
atlas = ExtResource("6_noxxc")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8tla"]
atlas = ExtResource("6_noxxc")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_erq1o"]
atlas = ExtResource("7_ffmvr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipugf"]
atlas = ExtResource("7_ffmvr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ns1iw"]
atlas = ExtResource("7_ffmvr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2d1b"]
atlas = ExtResource("7_ffmvr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6opk0"]
atlas = ExtResource("7_ffmvr")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ummy1"]
atlas = ExtResource("7_ffmvr")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w04t4"]
atlas = ExtResource("7_ffmvr")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nfot"]
atlas = ExtResource("7_ffmvr")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrqkf"]
atlas = ExtResource("7_ffmvr")
region = Rect2(256, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ijt2t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mmqnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_145ku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aljvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjdjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awxdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_moo20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfm10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_310om")
}],
"loop": true,
"name": &"enemy2",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1qtnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xholp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mr1cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylxwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pxln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55vig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54226")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4j8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aat6t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82wis")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e5est")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8tla")
}],
"loop": true,
"name": &"enemy_1",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_erq1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipugf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ns1iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2d1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6opk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ummy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w04t4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nfot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrqkf")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}]

[node name="initial_menu" type="Node2D"]
script = ExtResource("1_s8c3h")

[node name="texture_bg" type="Sprite2D" parent="."]
position = Vector2(150.5, 76)
scale = Vector2(0.788918, 0.554745)
texture = ExtResource("1_4ryru")

[node name="clouds" type="ParallaxLayer" parent="."]
position = Vector2(-8, -150)
motion_scale = Vector2(0.4, 1)
motion_mirroring = Vector2(432, 0)

[node name="clouds_anim" type="Sprite2D" parent="clouds"]
texture_repeat = 2
material = SubResource("ShaderMaterial_s2ggi")
position = Vector2(8, 153)
scale = Vector2(1.04167, 0.764423)
texture = ExtResource("4_4tl4r")
centered = false

[node name="texture_letters" type="Sprite2D" parent="."]
position = Vector2(148, 59)
scale = Vector2(0.788918, 0.554745)
texture = ExtResource("2_447t3")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_hbysu")
format = 2
layer_0/tile_data = PackedInt32Array(589824, 262144, 2, 589825, 262144, 2, 524288, 262144, 1, 524289, 262144, 1, 589823, 262144, 1, 524290, 262144, 1, 524291, 262144, 1, 524292, 262144, 1, 524293, 262144, 1, 524294, 262144, 1, 524295, 262144, 1, 524296, 262144, 1, 524297, 262144, 1, 524298, 262144, 1, 524299, 262144, 1, 524300, 262144, 1, 524301, 262144, 1, 524302, 262144, 1, 524303, 262144, 1, 524304, 262144, 1, 524305, 262144, 1, 524306, 262144, 1, 524307, 262144, 1, 524308, 262144, 1, 589822, 262144, 1, 655358, 262144, 2, 655359, 262144, 2, 589826, 262144, 2, 589827, 262144, 2, 589828, 262144, 2, 589829, 262144, 2, 589830, 262144, 2, 589831, 262144, 2, 589832, 262144, 2, 589833, 262144, 2, 589834, 262144, 2, 589835, 262144, 2, 589836, 262144, 2, 589837, 262144, 2, 589838, 262144, 2, 589839, 262144, 2, 589840, 262144, 2, 589841, 262144, 2, 589842, 262144, 2, 589843, 262144, 2, 589844, 262144, 2)

[node name="anim_player" type="AnimatedSprite2D" parent="."]
position = Vector2(43.75, 98.25)
scale = Vector2(2.04688, 2.07813)
sprite_frames = SubResource("SpriteFrames_ijt2t")
animation = &"idle"
frame_progress = 0.634316

[node name="anim_enemy" type="AnimatedSprite2D" parent="."]
position = Vector2(250, 105)
scale = Vector2(1.75, 1.6875)
sprite_frames = SubResource("SpriteFrames_ijt2t")
animation = &"enemy2"
frame_progress = 0.868139

[node name="anim_enemy2" type="AnimatedSprite2D" parent="."]
position = Vector2(146, 111)
scale = Vector2(1.625, 1.375)
sprite_frames = SubResource("SpriteFrames_ijt2t")
animation = &"enemy_1"
frame_progress = 0.996874

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button_start" type="Button" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0)
anchors_preset = -1
anchor_top = -0.06
anchor_right = 0.103333
anchor_bottom = -0.06
offset_left = 103.0
offset_top = 83.0
offset_right = 161.0
offset_bottom = 114.0
metadata/_edit_use_anchors_ = true

[connection signal="button_down" from="CanvasLayer/Button_start" to="." method="_on_button_start_button_down"]
